    tools. (Closes: #834264)
  * pg_wrapper: Don't fail if no local cluster exists on port 5432.
    Code cleanup. (Closes: #777623)
  * createcluster.conf: Add add_include_dir='conf.d' for drop-in PostgreSQL
    config snippets in /etc/postgresql/version/cluster/conf.d/ and
    include_dir='/etc/postgresql-common/createcluster.d' for pg_createcluster
    config snippets.

 -- Christoph Berg <myon@debian.org>  Fri, 12 May 2017 21:18:03 +0200

postgresql-common (182) experimental; urgency=medium

  * Team upload.
  * pg_buildext: Resurrect the previously deprecated "srcdir" mode to allow
    building packages from a subdirectory, and make "loop" support it as well.
  * t/001_packages.t: PostgreSQL 10 doesn't have a separate contrib package.
  * t/020_create_sql_remove.t: Use CREATE EXTENSION, createlang is being
    removed.
  * t/120_pg_upgradecluster_scripts.t: Don't try to rename
    pg_upgradecluster.d, fails on overlayfs.
  * pg_lsclusters, t: pg_log directory name changed in 10.
  * pg_lsclusters: Allow listing one version or one cluster only.
  * pg_lsclusters: Support JSON output, suggest libjson-perl for that.
  * pg_createcluster, createcluster.conf: Update for --waldir rename.
  * pg_createcluster: Do not suppress initdb output, and use pg_lsclusters to
    show created cluster info.
  * pg_ctlcluster: Suppress "Redirecting to systemctl message".
  * pg_upgradecluster: Deprecate min_parallel_relation_size and
    sql_inheritance in 10.
  * Symlink /usr/bin/pg_receivewal to pg_wrapper.
  * PgCommon.pm: Include postgresql.conf in cluster_info and remove variables
    directly copied from config; adjust callers.
  * PgCommon.pm: Allow more characters in unquoted config values.
    Spotted by Fabien Coelho, merci!
  * postgresql-server-dev-all: dh_make_pgxs: Template mechanism for new
    Debian packages based on PGXS Makefiles.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 11 May 2017 14:01:59 +0200

postgresql-common (181) unstable; urgency=medium
