@@ -28,6 +28,7 @@ postgresql-common (183) UNRELEASED; urgency=medium
     config snippets in /etc/postgresql/version/cluster/conf.d/ and
     include_dir='/etc/postgresql-common/createcluster.d' for pg_createcluster
     config snippets.
+  * t/051_inconsistent_encoding_upgrade.t: Remove, only relevant for <= 8.2.
 
  -- Christoph Berg <myon@debian.org>  Fri, 12 May 2017 21:18:03 +0200
 
